# Satellite_image_analysis_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.mcp  Dockerfile.microservice  Dockerfile.orchestrator  README.md  docker-compose.microservices.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/docs/: analysis_faq.md  opencv_ops_guide.md  satellite.md  sentinel2_overview.md
data/vector_store/: rag_store.sqlite3
deploy/: Caddyfile  grafana-dashboard.json
frontend/: chatbot.html  index.html
frontend/static/css/: styles.css
frontend/static/js/: chatbot.js  (+2 more)
mcp_satellite_server/: opencv_ops.py  schemas.py  server.py
orchestrator_api/: config.py  llm.py  main.py  mcp_client.py  observability.py  router.py  schemas.py  security.py
orchestrator_api/rag/: chunker.py  embedder.py  ingest.py  langchain_retriever.py  parser.py  retrieve.py  store.py
orchestrator_api/services/: chat_langchain_pipeline.py  chat_service.py
orchestrator_api/tools/: mcp_tools.py
scripts/: dev_split_run.sh
services/: README_MICROSERVICES.md
services/api-gateway/: main.py
services/embedding-service/: main.py
services/file-service/: main.py
services/health-service/: main.py
services/retrieve-service/: main.py
tests/: conftest.py  test_auth.py  test_chat.py  test_chat_langchain_pipeline.py  test_chat_mcp.py  test_chat_service_tools.py  test_chunker.py  test_ingest.py  test_langchain_retriever_adapter.py  test_llm_resilience.py  test_mcp_rpc.py  test_mcp_sse.py  test_mcp_tool.py  test_retrieve_line_refine.py  test_router.py  test_upload.py
(+33 files in other folders)
